# project

./: README.md
Between_Universe_Steeve/: Between_Universe.pro  Between_Universe.pro.user.df1916  Doxyfile  character.h  colliderobject.cpp  colliderobject.h  configdialog.ui  enemy.cpp  enemy.h  galata.cpp  galata.h  game.h  items.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mode.h  player.cpp  player.h  renderer.cpp  renderer.h  renderergl.cpp  renderergl.h  rendererwidget.cpp  rendererwidget.h  ressources.qrc  ship.cpp  ship.h  space.cpp  space.h  state.h.autosave  statestack.cpp  statestack.h  weapon.cpp  weapon.h
Between_Universe_Steeve/doc/: README.txt  diagram.mdj
Between_Universe_Steeve/include/: character.h  colliderobject.h  configdialog.h  desktop.ini  enemy.h  galata.h  game.h  glwidget.h  item.h  mainwindow.h  mode.h  player.h  renderer.h  ship.h  space.h  weapon.h  widget.h
GLSteeve/: fragment.fs.glsl  main.cpp  vertex.vs.glsl
QtOpenGL/: CMakeLists.txt  Makefile  QtOpenGL.pro  QtOpenGL.smproj  README.txt  assets_images.qrc  assets_sound.qrc  audio.cpp  audio.h  camera.cpp  camera.h  enemy.cpp  game.cpp  game.h  glexception.cpp  glexception.h  glwidget.cpp  gui.cpp  gui.h  item.cpp  item.h  level.cpp  level.h  main.cpp  mainwindow.cpp  map.cpp  map.h  mapelement.cpp  menu.cpp  menu.h  mode.h  object3d.cpp  object3d.h  player.cpp  player.h  renderer.cpp  renderer.h  ressource.qrc  tools.h  vertex.h
QtOpenGL/include/: camera.h  enemy.h  game.h  glexception.h  glwidget.h  gui.h  mainwindow.h  map.h  mapelement.h  menu.h  mode.h  object3d.h  renderer.h  tools.h  vertex.h
QtOpenGL/level/: level1.xml  level2.xml  map1.ppm  map2.ppm
QtOpenGL/models/: contour.mtl  duff.3ds  duff.t3d  porte.mtl  stairs2.3DS  stairs3.3DS  stairs4.3DS
QtOpenGL/shaders/: advanced_fragment.fs.glsl  advanced_vertex.vs.glsl  duff.max  fragment.fs.glsl  minimal_fragment.fs.glsl  minimal_vertex.vs.glsl  taidmat.mat  vertex.vs.glsl
QtOpenGL/src/: audio.cpp  enemy.cpp  glexception.cpp  glwidget.cpp  gui.cpp  level.cpp  mainwindow.cpp  map.cpp  menu.cpp  moc_audio.cpp  moc_mainwindow.cpp  object3d.cpp  player.cpp  renderer.cpp
build-GLSteeve-CMake_basex86-Default/: CMakeCache.txt  GLNous.cbp  Makefile  cmake_install.cmake
build-GLSteeve-CMake_basex86-Release/: CMakeCache.txt  GLSteeve.cbp  Makefile  cmake_install.cmake
build-QtOpenGL-Desktop_Qt_5_3_MSVC2013_OpenGL_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
templateGLWindows/: CMakeLists.txt  fragment.fs.glsl  main.cpp  vertex.vs.glsl
(+617 files in other folders)
